[project]
name = "test-ev"
version = "0.1.0"
dependencies = [
    "daft[openai,turbopuffer]==0.6.14",
    "psycopg[binary]",
    "sqlglot",
    "connectorx >= 0.4.4",
    "numpy>=2.3.4",
    "openai>=2.6.1",
    "pillow>=12.0.0",
    "python-dotenv>=1.2.1",
    "torch",
    "transformers>=4.57.1",
    "sentence_transformers",
]
